--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+amqp_worker = "0.9"
+futures = "^0.1"
+jq-rs = "0.4.1"
+lapin-futures = "^0.28"
+log = "^0.4"
+semver = "^0.9"
+serde = "^1.0"
+serde_json = "^1.0"
+simple_logger = "1.0.1"
+
+[build-dependencies]
+built = "0.4"
