--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,11 @@ matrix:
         # Fail if clippy output contains "error:" or "warning:"
         - cargo clippy 2>&1 | tee ./clippy.out && ! grep -qe  "error:\|warning:" ./clippy.out
 
+before_install:
+  - sudo apt-get -y install gcc make autotools-dev jq
+env:
+  jobs:
+    - JQ_LIB_DIR=/usr/bin/jq
 script:
   - cargo test
 cache:
@@ -45,3 +50,4 @@ addons:
   apt:
     packages:
       - libssl-dev  # Required for tarpaulin
+    update: true
