--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,16 @@ version = "0.1.0"
 authors = ["Mathia Haure-Touze <mathia.haure-touzet.ext@francetv.fr>"]
 edition = "2018"
 
+[features]
+bundled = ["jq-sys/bundled"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 amqp_worker = "0.9"
 futures = "^0.1"
-jq-rs = "0.4.1"
+jq-rs = {version = "0.4.1", features = ["bundled"]}
+jq-sys = "0.2.2"
 lapin-futures = "^0.28"
 log = "^0.4"
 semver = "^0.9"
