define stage order

--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,11 @@ jobs:
               make docker-push-registry
       if: branch = master
 
+stages:
+  - version
+  - test
+  - deploy
+
 addons:
   apt:
     packages:
