--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-
 language: rust
 
 rust:
@@ -10,9 +9,6 @@ rust:
   - beta
   - nightly
 
-services:
-  - "docker"
-
 matrix:
   allow_failures:
     - rust: nightly
@@ -20,9 +16,7 @@ matrix:
 
   include:
     # Rustfmt
-    - stage: format
-      name: "Format"
-      rust: stable
+    - rust: stable
       install:
         - rustup component add rustfmt-preview
       before_script:
@@ -31,47 +25,34 @@ matrix:
         - cargo fmt -- --check
 
     # Clippy
-    - stage: clippy
-      name: "Clippy"
-      rust: stable
+    - rust: stable
       install:
         - rustup component add clippy-preview
       script:
         # Fail if clippy output contains "error:" or "warning:"
         - cargo clippy 2>&1 | tee ./clippy.out && ! grep -qe  "error:\|warning:" ./clippy.out
 
-    - stage: "test"
-      name: "Unit Tests"
-      rust: stable
-      script: cargo test
+    # Test coverage (with Tarpaulin)
+    - rust: stable
+      # To avoid "Error: EPERM: operation not permitted" error (see https://github.com/valery-barysok/session-file-store/issues/58)
+      sudo: true
+      install:
+        - RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin --force
+      script:
+        - cargo tarpaulin -v --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
+      env: ALLOW_FAILURE=TRUE
 
-    - stage: version
-      name: "Check version"
-      script: make docker-registry-login && make check-version
-
-    - stage: deploy
-      name: "Deploy to docker hub"
-      script: make docker-registry-login && \
-              make docker-build && \
-              make docker-push-registry
-      if: branch = master
+script:
+  - cargo test
 
 cache:
   cargo: true
+
 before_cache:
   # Travis can't cache files that are not readable by "others"
   - chmod -R a+r $HOME/.cargo
 
-stages:
-  - version
-  - format
-  - clippy
-  - test
-  - deploy
-
 addons:
   apt:
     packages:
-      - libssl-dev      # Required for tarpaulin
-      - make
-    update: true
+      - libssl-dev  # Required for tarpaulin
