feat: read any kind of xml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,13 @@ matrix:
       install:
         - RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin --force
       script:
-        - cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID -- --test-threads=1
+        - cargo tarpaulin --ciserver travis-ci --coveralls $TRAVIS_JOB_ID
       env:
         - COVERAGE_CHECK=TRUE
 
 script:
   # Avoid overwriting during test execution
-  - cargo test -- --test-threads=1
+  - cargo test
 
 cache:
   cargo: true
