--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ mcai_worker_sdk = "0.10"
 jq-rs = {version = "0.4.1", features = ["bundled"]}
 jxon = "0.7.0"
 serde_json = "1.0.53"
+xmltree = "0.10.0"
 
 [build-dependencies]
 built = "0.4"
